# jyinit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  struct.ini
.github/workflows/: publish.yml
docs/: cli-reference.md  examples.md  installation.md  intro.md  license.md  sidebar.js  templates.md  usage.md
src/jyinit/: __main__.py
src/jyinit/data/: templates.json
src/pyprojinit/: __init__.py  __main__.py  pyprojinit.py
src/pyprojinitx/: __init__.py  __main__.py
tests/: test_smoke.py
