[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprojinit"
version = "0.0.1"
description = "pyprojinit - scaffold Python projects (CLI)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Jeevan N", email = "njeevan@gmail.com" }
]
license = { text = "MIT" }
keywords = ["scaffold", "cookiecutter", "cli", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
urls = {
    "Homepage" = "https://github.com/nj2216/pyprojinit",
    "Documentation" = "https://njeevan.vercel.app/pyprojinit",
    "Source" = "https://github.com/nj2216/pyprojinit",
    "Issues" = "https://github.com/nj2216/pyprojinit/issues"
}

[project.scripts]
pyprojinit = "pyprojinit.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
