[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprojinitx"
version = "0.0.1"
description = "pyprojinitx - scaffold Python projects (CLI)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Jeevan N", email = "njeevan@gmail.com" }
]
license = { text = "MIT" }
keywords = ["scaffold", "cookiecutter", "cli", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
[project.urls]
Homepage = "https://github.com/nj2216/pyprojinitx"
Documentation = "https://njeevan.vercel.app/pyprojinitx"
Source = "https://github.com/nj2216/pyprojinitx"
Issues = "https://github.com/nj2216/pyprojinitx/issues"

[project.scripts]
pyprojinitx = "pyprojinitx.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
